// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Toggle Default 1`] = `
<div>
  <div
    className="sc-bdVaJa gEyPxw"
  >
    <label
      className="sc-bwzfXH kUCBNx"
    >
      <input
        checked={false}
        name="toggle"
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="sc-slider"
      />
    </label>
    <span
      className="text sc-htpNat efAdPk"
    >
      Airplane Mode
    </span>
  </div>
  <div
    className="sc-bdVaJa gEyPxw"
  >
    <label
      className="sc-bwzfXH kUCBNx"
    >
      <input
        checked={true}
        name="toggle"
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="sc-slider"
      />
    </label>
    <span
      className="text sc-htpNat efAdPk"
    >
      Airplane Mode
    </span>
  </div>
</div>
`;

exports[`Storyshots Toggle ThemeProvider 1`] = `
<div>
  <div>
    <div
      className="sc-bdVaJa gEyPxw"
    >
      <label
        className="sc-bwzfXH jvMNrq"
      >
        <input
          checked={false}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="sc-slider"
        />
      </label>
      <span
        className="text sc-htpNat efAdPk"
      >
        Airplane Mode
      </span>
    </div>
    <div
      className="sc-bdVaJa gEyPxw"
    >
      <label
        className="sc-bwzfXH jvMNrq"
      >
        <input
          checked={true}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="sc-slider"
        />
      </label>
      <span
        className="text sc-htpNat efAdPk"
      >
        Airplane Mode
      </span>
    </div>
  </div>
</div>
`;
